# RAPF-RM

./: .gitignore  Instruccions_YOLO.txt  README.md  README_OpenCR_Firmware_Waffle_OpenMANIPULATOR.txt  README_TB3_Waffle_OpenMANIPULATOR_Pinza.txt  README_YOLO_WAFFLE_ROS1_NOETIC.txt
docs/: waste_behavior_algorithm.md
notebooks/: yolov8n_mendeley_colab.ipynb
recycling_world/: CMakeLists.txt  README.md  package.xml
recycling_world/launch/: recycling_navigation.launch  recycling_slam.launch  recycling_world.launch
recycling_world/worlds/: recycling_world.world
scripts/: setup_tb3_manipulation.sh
tests/: test_behavior_state_machine.py  test_colab_notebook.py  test_geometry.py  test_mendeley_yolo_preparation.py  test_taco_conversion.py  test_taxonomy.py  test_yolo_training.py
waste_robot_behavior/: CMakeLists.txt  README.md  __init__.py  behavior.py  detections.py  geometry.py  package.xml  setup.py  taxonomy.py
waste_robot_behavior/config/: taco_to_4_bins.csv  taco_to_5_bins.csv  yolo_data.yaml
waste_robot_behavior/dataset/: __init__.py  mendeley_yolo.py  taco_to_yolo.py  train_yolov8.py
waste_robot_behavior/launch/: waste_behavior_mock.launch
waste_robot_behavior/scripts/: mock_robot_io_node.py  waste_behavior_node.py  yolo_rgbd_detector_node.py
yolo_test/yolo_test/: CMakeLists.txt  package.xml
yolo_test/yolo_test/scripts/: yolo_node.py
